--- a/OPENPAAS-IEDA-CONTROLLER/src/main/resources/static/deploy_template/bootstrap/262/google/bootstrap.yml
+++ b/OPENPAAS-IEDA-CONTROLLER/src/main/resources/static/deploy_template/bootstrap/262/google/bootstrap.yml
@@ -3,8 +3,10 @@ name: bosh
 
 releases:
 - name: bosh
+  version: [boshReleaseVersion]
   url: file:///[boshRelease]
-- name: bosh-openstack-cpi
+- name: bosh-google-cpi
+  version: [boshCpiReleaseVersion]
   url: file:///[boshCpiRelease]
 
 resource_pools:
@@ -13,7 +15,10 @@ resource_pools:
   stemcell: 
     url: file:///[stemcell]
   cloud_properties: 
-    instance_type: [cloudInstanceType]
+    zone: [availabilityZone]
+    machine_type: [cloudInstanceType]
+    root_disk_size_gb: [rootDiskSizeGb]
+    root_disk_type: [rootDiskType]
   env:
     bosh:
       password: [boshPassword]
@@ -21,6 +26,7 @@ resource_pools:
 disk_pools:
 - name: disks
   disk_size: 40960
+  cloud_properties: {type: [rootDiskType]}
 
 networks:
 - name: private
@@ -30,21 +36,25 @@ networks:
     gateway: [subnetGateway]
     static: [[privateStaticIp]]
     dns: [[subnetDns]]
-    cloud_properties: {net_id: [subnetId]}
+    cloud_properties: 
+      network_name: [networkName]
+      subnetwork_name: [subnetId]
+      ephemeral_external_ip: false
+      tags: [defaultSecurityGroups]
 - name: public
   type: vip
 
 instance_groups:
 - name: bosh
   instances: 1
-  jobs:
+  jobs: &cpi_job
   - {name: nats, release: bosh}
   - {name: postgres-9.4, release: bosh}
   - {name: blobstore, release: bosh}
   - {name: director, release: bosh}
   - {name: health_monitor, release: bosh}
   - {name: registry, release: bosh}
-  - {name: openstack_cpi, release: bosh-openstack-cpi}
+  - {name: google_cpi, release: bosh-google-cpi}
   resource_pool: vms
   persistent_disk_pool: disks
   networks:
@@ -116,7 +126,7 @@ instance_groups:
             password: admin
           - name: hm
             password: hm-password
-      cpi_job: openstack_cpi
+      cpi_job: google_cpi
     hm:
       director_account:
         user: hm
@@ -136,20 +146,16 @@ instance_groups:
         password: postgres-password
         database: bosh
         adapter: postgres
+      http: 
+        user: registry
+        password: registry-password
+        port: 25777
       username: registry
       password: registry-password
       port: 25777
-      endpoint: http://registry:registry-password@[privateStaticIp]:25777
-    openstack: &openstack
-      auth_url: [accessEndpoint]
-      username: [accessUser]
-      api_key: [accessSecret]
-      domain: [domain]
-      project: [project]
-      region: [region]
-      default_key_name: [privateKeyName]
-      default_security_groups: [[defaultSecurityGroups]]
-      human_readable_vm_names: true
+    google: &cpi_conf
+      project: [projectId]
+      json_key: [jsonKey]
 
 cloud_provider:
   mbus: https://mbus:mbus-password@[publicStaticIp]:6868
@@ -157,10 +163,8 @@ cloud_provider:
     agent: {mbus: "https://mbus:mbus-password@0.0.0.0:6868"}
     blobstore: {provider: local, path: /var/vcap/micro_bosh/data/cache}
     ntp: *ntp
-    openstack: *openstack
-  template:
-    name: openstack_cpi
-    release: bosh-openstack-cpi
+    google: *cpi_conf
+  template: *cpi_job
   ssh_tunnel:
     host: [publicStaticIp]
     port: 22
