aws boshv2 bootstrap update

--- a/OPENPAAS-IEDA-CONTROLLER/src/main/resources/static/deploy_template/bootstrap/262/aws/bootstrap.yml
+++ b/OPENPAAS-IEDA-CONTROLLER/src/main/resources/static/deploy_template/bootstrap/262/aws/bootstrap.yml
@@ -154,7 +154,7 @@ instance_groups:
       access_key_id: [accessUser]
       secret_access_key: [accessSecret]
       default_key_name: [privateKeyName]
-      default_security_groups: [defaultSecurityGroups]
+      default_security_groups: [[defaultSecurityGroups]]
       region: [region]
 
 cloud_provider:
