--- a/OPENPAAS-IEDA-CONTROLLER/src/main/resources/static/deploy_template/bootstrap/262/google/bootstrap2.yml
+++ b/OPENPAAS-IEDA-CONTROLLER/src/main/resources/static/deploy_template/bootstrap/262/google/bootstrap2.yml
@@ -3,15 +3,15 @@ name: bosh
 
 releases:
 - name: bosh
+  version: [boshReleaseVersion]
   url: file:///[boshRelease]
 - name: bosh-google-cpi
+  version: [boshCpiReleaseVersion]
   url: file:///[boshCpiRelease]
-- name: os-conf
-  url: file:////home/cloud4u/.bosh_plugin/release/os-conf-release-13.tgz
 
 resource_pools:
 - name: vms
-  network: private
+  network: public
   stemcell: 
     url: file:///[stemcell]
   cloud_properties: 
@@ -25,7 +25,8 @@ resource_pools:
 
 disk_pools:
 - name: disks
-  disk_size: 65_536
+  disk_size: 40960
+  cloud_properties: {type: [rootDiskType]}
 
 networks:
 - name: private
@@ -38,6 +39,7 @@ networks:
     cloud_properties: 
       network_name: [networkName]
       subnetwork_name: [subnetId]
+      ephemeral_external_ip: false
       tags: [defaultSecurityGroups]
 - name: public
   type: vip
@@ -51,6 +53,8 @@ instance_groups:
   - {name: blobstore, release: bosh}
   - {name: director, release: bosh}
   - {name: health_monitor, release: bosh}
+  - {name: registry, release: bosh}
+  - {name: google_cpi, release: bosh-google-cpi}
   resource_pool: vms
   persistent_disk_pool: disks
   networks:
@@ -96,6 +100,8 @@ instance_groups:
         user: agent
         password: agent-password
     director:
+      default_ssh_options:
+        gateway_host: [publicStaticIp]
       address: 127.0.0.1
       name: [directorName]
       db: *db
@@ -120,6 +126,7 @@ instance_groups:
             password: admin
           - name: hm
             password: hm-password
+      cpi_job: google_cpi
     hm:
       director_account:
         user: hm
@@ -127,64 +134,41 @@ instance_groups:
         ca_cert: ((director_ssl.ca))
       resurrector_enabled: true
     ntp: &ntp
-    - time1.google.com
-    - time2.google.com
-    - time3.google.com
-    - time4.google.com
+    - [169.254.169.254]
     agent:
       mbus: nats://nats:nats-password@[privateStaticIp]:4222
-- name: jumpbox
-  instances: 1
-  jobs:
-  - name: disable_agent
-    release: os-conf
-    properties: {}
-  - name: user_add
-    release: os-conf
-    properties:
-      users:
-      - name: jumpbox
-        public_key: ((jumpbox_ssh.public_key))
-  resource_pool: vms
-  networks:
-  - name: private
-    static_ips: [[privateStaticIp]]
-    default: [dns, gateway]
-  - name: public
-    static_ips: [[publicStaticIp]]
+    registry:
+      address: [privateStaticIp]
+      host: [privateStaticIp]
+      db: # todo remove
+        host: 127.0.0.1
+        user: postgres
+        password: postgres-password
+        database: bosh
+        adapter: postgres
+      http: 
+        user: registry
+        password: registry-password
+        port: 25777
+      username: registry
+      password: registry-password
+      port: 25777
+    google: &cpi_conf
+      project: [projectId]
+      json_key: [jsonKey]
 
 cloud_provider:
-  mbus: https://mbus:mbus-password@[privateStaticIp]:6868
-  cert: ((mbus_bootstrap_ssl))
+  mbus: https://mbus:mbus-password@[publicStaticIp]:6868
   properties:
     agent: {mbus: "https://mbus:mbus-password@0.0.0.0:6868"}
     blobstore: {provider: local, path: /var/vcap/micro_bosh/data/cache}
     ntp: *ntp
-    google:
-      project: [projectId]
-      json_key: [jsonKey]
+    google: *cpi_conf
   template:
     name: google_cpi
     release: bosh-google-cpi
 
 variables:
-- name: admin_password
-  type: password
-- name: blobstore_director_password
-  type: password
-- name: blobstore_agent_password
-  type: password
-- name: hm_password
-  type: password
-- name: mbus_bootstrap_password
-  type: password
-- name: nats_password
-  type: password
-- name: postgres_password
-  type: password
-- name: jumpbox_ssh
-  type: ssh
-
 - name: default_ca
   type: certificate
   options:
@@ -195,8 +179,8 @@ variables:
   type: certificate
   options:
     ca: default_ca
-    common_name: [privateStaticIp]
-    alternative_names: [[privateStaticIp]]
+    common_name: [publicStaticIp]
+    alternative_names: [[publicStaticIp]]
 
 - name: nats_ca
   type: certificate
