--- a/OPENPAAS-IEDA-CONTROLLER/src/main/resources/static/deploy_template/bootstrap/264.7/google/bootstrap-paasta-monitering.yml
+++ b/OPENPAAS-IEDA-CONTROLLER/src/main/resources/static/deploy_template/bootstrap/264.7/google/bootstrap-paasta-monitering.yml
@@ -3,23 +3,22 @@ name: bosh
 
 releases:
 - name: bosh
-  version: [boshReleaseVersion]
   url: file:///[boshRelease]
 - name: bosh-google-cpi
-  version: [boshCpiReleaseVersion]
   url: file:///[boshCpiRelease]
+- name: os-conf
+  url: file:///[boshOsConfRelease]
 - name: [paastaMonitoringReleaseName]
   url: file:///[paastaMonitoringRelease]
+  
 resource_pools:
 - name: vms
-  network: public
+  network: private
   stemcell: 
     url: file:///[stemcell]
   cloud_properties: 
     zone: [availabilityZone]
     machine_type: [cloudInstanceType]
-    root_disk_size_gb: [rootDiskSizeGb]
-    root_disk_type: [rootDiskType]
   env:
     bosh:
       password: [boshPassword]
@@ -27,7 +26,6 @@ resource_pools:
 disk_pools:
 - name: disks
   disk_size: 40960
-  cloud_properties: {type: [rootDiskType]}
 
 networks:
 - name: private
@@ -41,23 +39,24 @@ networks:
       network_name: [networkName]
       subnetwork_name: [subnetId]
       ephemeral_external_ip: false
-      tags: [defaultSecurityGroups]
+      tags: [[defaultSecurityGroups]]
 - name: public
   type: vip
 
 instance_groups:
 - name: bosh
   instances: 1
-  jobs:
+  jobs: 
   - {name: nats, release: bosh}
   - {name: postgres-9.4, release: bosh}
   - {name: blobstore, release: bosh}
   - {name: director, release: bosh}
   - {name: health_monitor, release: bosh}
-  - {name: registry, release: bosh}
   - {name: google_cpi, release: bosh-google-cpi}
+  - {name: user_add, release: os-conf}
   - {name: metrics_agent, release: [paastaMonitoringReleaseName]}
   - {name: logstash, release: [paastaMonitoringReleaseName]}
+  
   resource_pool: vms
   persistent_disk_pool: disks
   networks:
@@ -103,8 +102,6 @@ instance_groups:
         user: agent
         password: agent-password
     director:
-      default_ssh_options:
-        gateway_host: [publicStaticIp]
       address: 127.0.0.1
       name: [directorName]
       db: *db
@@ -121,6 +118,8 @@ instance_groups:
       ssl:
         key: ((director_ssl.private_key))
         cert: ((director_ssl.certificate))
+      default_ssh_options:
+        gateway_host: [publicStaticIp]
       user_management:
         provider: local
         local:
@@ -134,10 +133,8 @@ instance_groups:
       director_account:
         user: hm
         password: hm-password
-        ca_cert: ((director_ssl.ca))
       resurrector_enabled: true
-    ntp: &ntp
-    - [ntp]
+      
     logstash:
       ingestor_bosh:
         host: [paastaMonitoringIp]
@@ -150,27 +147,17 @@ instance_groups:
         measurement: bosh_metrics
         processMeasurement: bosh_process_metrics
         url: [influxdbIp]
+    ntp: &ntp
+    - [ntp]
     agent:
       mbus: nats://nats:nats-password@[privateStaticIp]:4222
-    registry:
-      address: [privateStaticIp]
-      host: [privateStaticIp]
-      db: # todo remove
-        host: 127.0.0.1
-        user: postgres
-        password: postgres-password
-        database: bosh
-        adapter: postgres
-      http: 
-        user: registry
-        password: registry-password
-        port: 25777
-      username: registry
-      password: registry-password
-      port: 25777
-    google: &cpi_conf
+    google: 
       project: [projectId]
-      json_key: [jsonKey]
+      json_key: |+
+        [jsonKey]
+    users:
+    - name: vcap
+      public_key: [sshKeyFile]
 
 cloud_provider:
   mbus: https://mbus:mbus-password@[publicStaticIp]:6868
@@ -178,7 +165,10 @@ cloud_provider:
     agent: {mbus: "https://mbus:mbus-password@0.0.0.0:6868"}
     blobstore: {provider: local, path: /var/vcap/micro_bosh/data/cache}
     ntp: *ntp
-    google: *cpi_conf
+    google: 
+      project: [projectId]
+      json_key: |+
+        [jsonKey]
   template:
     name: google_cpi
     release: bosh-google-cpi
